--- a/src/locales/kr/qna.json
+++ b/src/locales/kr/qna.json
@@ -182,5 +182,17 @@
   "twenty": {
     "q": "당신의 스무 살은?",
     "a": "술무살?"
+  },
+  "afraid": {
+    "q": "가장 잃고 싶지 않은 것?",
+    "a": "사랑하는 사람"
+  },
+  "makeHappy": {
+    "q": "너를 기쁘게 하는 것?",
+    "a": "내가 사랑하는 사람들이 행복할 때 나 너무 기뻐"
+  },
+  "makeCry": {
+    "q": "너를 슬프게 하는 것?",
+    "a": "나 눈 아파서 맨날 울어"
   }
 }
