--- a/src/locales/kr/projects.json
+++ b/src/locales/kr/projects.json
@@ -1,4 +1,8 @@
 {
+  "personalWebsite": {
+    "title": "개인 웹사이트",
+    "sub": "바닐라 자바스크립트에서 리엑트로 업그레이드"
+  },
   "foodTruckFinder": {
     "title": "푸드 트럭 찾기",
     "sub": "프로그램이 실행되는 동안의 현재 날짜와 시간에 맞춰 샌프란시스코 내에 실시간으로 영업 중인 푸드 트럭 목록을 제공하는 커맨드 라인 인터페이스입니다."
