Change personal website section for project

--- a/src/locales/en/projects.json
+++ b/src/locales/en/projects.json
@@ -1,7 +1,7 @@
 {
   "personalWebsite": {
     "title": "Personal Website",
-    "sub": "Converted from vanilla JavaScript that I implemented in 2019 to React"
+    "sub": "Converted from vanilla JavaScript to React"
   },
   "foodTruckFinder": {
     "title": "Food Truck Finder",
