--- a/src/locales/kr/projects.json
+++ b/src/locales/kr/projects.json
@@ -5,38 +5,38 @@
   },
   "foodTruckFinder": {
     "title": "푸드 트럭 찾기",
-    "sub": "프로그램이 실행되는 동안의 현재 날짜와 시간에 맞춰 샌프란시스코 내에 실시간으로 영업 중인 푸드 트럭 목록을 제공하는 커맨드 라인 인터페이스입니다."
+    "sub": "프로그램이 실행되는 동안의 현재 날짜와 시간에 맞춰 샌프란시스코 내에 실시간으로 영업 중인 푸드 트럭 목록을 제공하는 커맨드 라인 인터페이스"
   },
   "covid19": {
     "title": "코로나-19 검사",
-    "sub": "코로나-19 검사를 희망하는 사람들을 위한 웹 애플리케이션입니다. 사용자는 검사 장소와 시간을 확인한 후, 원하는 날짜에 예약이 가능합니다. 또한 사용자의 프로필 정보와 예약을 관리(추가/수정/삭제) 할 수 있습니다."
+    "sub": "코로나-19 검사를 희망하는 사람들을 위한 애플리케이션. 검사 장소와 시간을 확인한 후, 원하는 날짜에 예약 할 수 있으며 사용자의 프로필 정보와 예약 관리(추가/수정/삭제) 가능"
   },
   "syntheticMonitoring": {
     "title": "종합 모니터링 시스템",
-    "sub": "이 종합 모니터는 프로덕션 환경에서 발생할 수 있는 모든 문제에 대해 카나리아 역할을 합니다. API 호출로 시작하여 이벤트 전달로 끝나는 프로세스 시간을 측정해 기록합니다."
+    "sub": "프로덕션 환경에서 발생할 수 있는 모든 문제에 대해 카나리아 역할을 하는 시스템. API 호출로 시작하여 이벤트 전달로 끝나는 프로세스 시간을 측정해 기록"
   },
   "multithreadedMapReduce": {
     "title": "멀티 스레드 맵 리듀스",
-    "sub": "이 프로그램에는 마스터 스레드와 하나의 생산자 스레드 및 여러 소비자가 포함되어 있습니다. 생산자와 소비자는 데이터 전송을 위한 큐를 공유합니다. 여러 스레드를 동시에 실행시키기 위해 글로벌 변수 주위에 뮤텍스 락 및 시그널이 사용되었습니다."
+    "sub": "이 프로그램에는 마스터 스레드와 하나의 생산자 스레드 및 여러 소비자가 포함되어 있으며, 생산자와 소비자는 데이터 전송을 위한 큐를 공유. 여러 스레드를 동시에 실행시키기 위해 글로벌 변수 주위에 뮤텍스 락 및 시그널이 사용"
   },
   "socketProgramming": {
     "title": "소켓 프로그래밍",
-    "sub": "두 개의 노드(서버, 클라이언트)를 네트워크에서 연결하여 서로 통신하도록 합니다. 서버는 특정 IP 주소와 포트 넘버를 수신하며, 클라이언트는 서버에게 연결을 시도합니다. 이 프로그램의 목적은 소켓 프로그래밍을 이용하여 워드 카운트 애플리케이션을 구현하는 것입니다."
+    "sub": "두 개의 노드(서버, 클라이언트)를 네트워크에서 연결하여 서로 통신하도록 함. 서버는 특정 IP 주소와 포트 넘버를 수신하며, 클라이언트는 서버에게 연결을 시도. 소켓 프로그래밍을 이용하여 워드 카운트 애플리케이션을 구현"
   },
   "chatServer": {
     "title": "채팅 서버",
-    "sub": "여러 사용자가 인터넷을 통해 서로 (텍스트) 채팅 할 수 있는 서버입니다."
+    "sub": "여러 사용자가 인터넷을 통해 서로 (텍스트) 채팅 할 수 있는 서버"
   },
   "eventFilter": {
     "title": "일정 분류",
-    "sub": "원하는 단어를 입력하면 자동으로 해당 단어가 포함된 일정들을 분류해주는 사이트입니다. 주로 PHP를 사용하여 이벤트를 분류해 클라이언트에게 제공하도록 구현하였습니다."
+    "sub": "원하는 단어를 입력하면 자동으로 해당 단어가 포함된 일정들을 분류. PHP를 사용하여 이벤트를 분류해 클라이언트에게 제공하도록 구현"
   },
   "userControlSystem": {
     "title": "유저 제어 시스템",
-    "sub": "스케줄을 데이터베이스에 저장하고 로그인할 수 있으며 추가, 수정, 삭제 등이 가능한 사이트 입니다."
+    "sub": "스케줄을 데이터베이스에 저장하고 로그인할 수 있으며 추가, 수정, 삭제 등이 가능한 사이트"
   },
   "documentSimilarity": {
     "title": "문서 유사성",
-    "sub": "이 프로젝트는 문서 유사성이라는 아이디어를 기반으로 합니다. 이것은 검색 개선, 자동 문서 분류, 자동 문서 요약, 저작자 표시 및 표절 탐지와 같은 많은 '빅 데이터' 응용 프로그램의 첫 번째 단계입니다."
+    "sub": "문서 유사성이라는 아이디어를 기반으로 한 프로젝트. 검색 개선, 자동 문서 분류, 자동 문서 요약, 저작자 표시 및 표절 탐지와 같은 많은 빅 데이터 응용 프로그램의 첫 번째 단계"
   }
 }
