--- a/src/locales/en/projects.json
+++ b/src/locales/en/projects.json
@@ -1,7 +1,7 @@
 {
   "personalWebsite": {
     "title": "Personal Website",
-    "sub": "Converted from vanilla JavaScript to React"
+    "sub": "Implemented and designed it by myself and it has all about me."
   },
   "foodTruckFinder": {
     "title": "Food Truck Finder",
