--- a/src/locales/en/qna.json
+++ b/src/locales/en/qna.json
@@ -129,7 +129,7 @@
   },
   "born": {
     "q": "If you were to be born again, what would you want to be?",
-    "a": "I like being myself"
+    "a": "Hyunjin again!"
   },
   "callORtext": {
     "q": "Calling Vs Texting",
