--- a/src/locales/kr/projects.json
+++ b/src/locales/kr/projects.json
@@ -1,7 +1,7 @@
 {
   "personalWebsite": {
-    "title": "개인 웹사이트",
-    "sub": "바닐라 자바스크립트에서 리엑트로 업그레이드"
+    "title": "개인 홈페이지",
+    "sub": "직접 개발 및 디자인 한 개인 웹 사이트"
   },
   "foodTruckFinder": {
     "title": "푸드 트럭 찾기",
