--- a/src/locales/kr/qna.json
+++ b/src/locales/kr/qna.json
@@ -33,7 +33,7 @@
   },
   "food": {
     "q": "좋아하는 음식?",
-    "a": "타코"
+    "a": "돈가스"
   },
   "love": {
     "q": "사랑이란?",
@@ -44,8 +44,8 @@
     "a": "보고싶은데 볼 수가 없을 때"
   },
   "worried": {
-    "q": "요즘 걱정 있어?",
-    "a": "잠을 잘 못자"
+    "q": "걱정 있어?",
+    "a": "눈이 너무 아팡"
   },
   "wish": {
     "q": "소원 있어?",
@@ -92,8 +92,8 @@
     "a": "홈팟 미니로 노래 틀어"
   },
   "song": {
-    "q": "요즘 자주 듣는 노래?",
-    "a": "Running on my mind"
+    "q": "자주 듣는 노래?",
+    "a": "Monster by Shawn & Justin"
   },
   "drone": {
     "q": "갖고 싶은거 있어?",
@@ -101,7 +101,7 @@
   },
   "dream": {
     "q": "가장 최근에 꾼 꿈?",
-    "a": "잠을 잘 못 잔다고!"
+    "a": "나 잠을 못자"
   },
   "phone": {
     "q": "사용 중인 폰?",
