--- a/src/locales/en/qna.json
+++ b/src/locales/en/qna.json
@@ -93,7 +93,7 @@
   },
   "song": {
     "q": "Which song are you listening to recently?",
-    "a": "Monster by Shawn & Justin"
+    "a": "Remedy by Ali Gatie"
   },
   "drone": {
     "q": "Do you want anything?",
