--- a/src/locales/kr/qna.json
+++ b/src/locales/kr/qna.json
@@ -93,7 +93,7 @@
   },
   "song": {
     "q": "자주 듣는 노래?",
-    "a": "Monster by Shawn & Justin"
+    "a": "Remedy by Ali Gatie"
   },
   "drone": {
     "q": "갖고 싶은거 있어?",
