Update some contents

--- a/src/locales/en/about.json
+++ b/src/locales/en/about.json
@@ -3,7 +3,7 @@
   "education": "Education",
   "sentera": {
     "date": "Oct 2021 - Dec 2022",
-    "title": "Frontend Engineer"
+    "title": "Software Engineer"
   },
   "umnSchool": {
     "date": "Graduated Dec 2020",
