--- a/src/locales/kr/about.json
+++ b/src/locales/kr/about.json
@@ -3,7 +3,7 @@
   "education": "학업",
   "sentera": {
     "date": "2021년 10월 - 2022년 12월",
-    "title": "프론트엔드 개발자"
+    "title": "소프트웨어 엔지니어"
   },
   "umnSchool": {
     "date": "2020년 12월 졸업",
