--- a/src/locales/kr/qna.json
+++ b/src/locales/kr/qna.json
@@ -15,8 +15,12 @@
     "q": "최근 가장 기억에 남는 순간?",
     "a": "2022년 여름"
   },
+  "color": {
+    "q": "좋아하는 색?",
+    "a": "블랙"
+  },
   "netflix": {
-    "q": "좋아하는 넷플릭스 시리즈?",
+    "q": "좋아하는 넷플릭스?",
     "a": "미스터 션샤인"
   },
   "21st": {
@@ -45,7 +49,7 @@
   },
   "worried": {
     "q": "걱정 있어?",
-    "a": "눈이 너무 아팡"
+    "a": "잠을 잘 못자"
   },
   "wish": {
     "q": "소원 있어?",
@@ -85,23 +89,19 @@
   },
   "night": {
     "q": "자기 전에 뭐해?",
-    "a": "<1>생각을 글로 써</1>"
+    "a": "생각을 글로 써"
   },
   "morning": {
     "q": "일어나자마자 뭐해?",
     "a": "홈팟 미니로 노래 틀어"
   },
   "song": {
-    "q": "자주 듣는 노래?",
-    "a": "Remedy by Ali Gatie"
+    "q": "요즘 자주 듣는 노래?",
+    "a": "Time by NF"
   },
   "drone": {
     "q": "갖고 싶은거 있어?",
     "a": "드론"
-  },
-  "dream": {
-    "q": "가장 최근에 꾼 꿈?",
-    "a": "나 잠을 못자"
   },
   "phone": {
     "q": "사용 중인 폰?",
@@ -188,11 +188,27 @@
     "a": "사랑하는 사람"
   },
   "makeHappy": {
-    "q": "너를 기쁘게 하는 것?",
-    "a": "내가 사랑하는 사람들이 행복할 때 나 너무 기뻐"
+    "q": "당신을 기쁘게 하는 것은?",
+    "a": "사랑"
   },
   "makeCry": {
-    "q": "너를 슬프게 하는 것?",
-    "a": "나 눈 아파서 맨날 울어"
+    "q": "당신을 슬프게 하는 것은?",
+    "a": "사랑"
+  },
+  "dailyRoutine": {
+    "q": "하루 루틴?",
+    "a": "일-운동-일-운동"
+  },
+  "call": {
+    "q": "가장 최근에 통화한 사람?",
+    "a": "아빵"
+  },
+  "nickname": {
+    "q": "닉네임?",
+    "a": "지니~"
+  },
+  "fruit": {
+    "q": "좋아하는 과일?",
+    "a": "복숭아"
   }
 }
