--- a/src/locales/kr/qna.json
+++ b/src/locales/kr/qna.json
@@ -89,7 +89,7 @@
   },
   "night": {
     "q": "자기 전에 뭐해?",
-    "a": "생각을 글로 써"
+    "a": "<1>생각을 글로 써</1>"
   },
   "morning": {
     "q": "일어나자마자 뭐해?",
